<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5e9dfc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Here you can change your profile"
        android:id="@+id/changeView"
        android:paddingTop="20dp"
        android:textSize="23dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <!--Username field-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Hint_username"
        android:ems="10"
        android:id="@+id/changeUsername"
        android:editable="false"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textColor="#000000" />

    <!--email field-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/changeEmail"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Hint_email" />

    <!--password field-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/changePass"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Hint_password" />

    <!--zipcode field-->
    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:id="@+id/changeZipcode"
        android:textSize="12dp"
        android:textColor="#000000"
        android:hint="@string/Hint_zipcode"/>

    <!--cold temperature field-->
    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeColdTemp"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:hint="@string/Hint_coldTemp"/>

    <!--chilly temperature field-->

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeChillyTemp"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:hint="@string/Hint_chillyTemp"/>

    <!--comfortable temperature field-->
    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeComfortableTemp"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:hint="@string/Hint_comfortableTemp" />

    <!--warm temperature field-->
    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeWarmTemp"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:hint="@string/Hint_warmTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Gender:"
        android:id="@+id/GenderTitle"
        android:layout_gravity="center_horizontal"
        android:paddingTop="8dp"
        android:textColor="#000000" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ChangeGender">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:layout_gravity="left"
            android:textColor="#000000"
            android:theme="@style/_UIUC" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:textColor="#000000"
            android:theme="@style/_UIUC" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit Changes"
        android:id="@+id/submit2"
        android:layout_gravity="center_horizontal"
        android:onClick="changeToProfile"
        android:textColor="#ff7300" />

</LinearLayout>