<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zongyiwang.what2weartest.ProfileinfoActivity"
    android:background="#5e9dfc">

    <ImageView
        android:layout_width="152dp"
        android:layout_height="205dp"
        android:id="@+id/imageView"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profileinfo_mainTitle"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileinfo_name"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/button_what2wear"
        android:layout_toStartOf="@+id/button_what2wear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileinfo_gender"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileinfo_location"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileinfo_phone"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileinfo_button_w2wear"
        android:id="@+id/button_what2wear"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="GetWhat2Wear"
        android:textColor="#ff7300"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/name_clickToEdit"
        android:text="Click to edit"
        android:layout_above="@+id/textView4"
        android:layout_toRightOf="@+id/button_what2wear"
        android:layout_toEndOf="@+id/button_what2wear"
        android:textColor="#00c9e7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/gender_ClickToEdit"
        android:text="Click to edit"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/name_clickToEdit"
        android:layout_alignStart="@+id/name_clickToEdit"
        android:textColor="#00c9e7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/location_clickToEdit"
        android:text="Click to edit"
        android:layout_above="@+id/textView6"
        android:layout_toRightOf="@+id/button_what2wear"
        android:layout_toEndOf="@+id/button_what2wear"
        android:textColor="#00c9e7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/phone_clickToEdit"
        android:text="Click to edit"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/location_clickToEdit"
        android:layout_alignStart="@+id/location_clickToEdit"
        android:textColor="#00c9e7" />

</RelativeLayout>
